crates/toon-schema/tests/compile_fail/tuple_struct.stderr
error: tuple structs are not supported in `toon_tool!`
 --> tests/compile_fail/tuple_struct.rs:6:9
  |
6 |         #[derive(serde::Deserialize, serde::Serialize)]
  |         ^
